Update java-application-performance-tuning-and-memory-management.md